--- a/requirements.txt
+++ b/requirements.txt
@@ -108,11 +108,12 @@ fsspec==2025.7.0
 future==1.0.0
 gitdb==4.0.12
 GitPython==3.1.45
-google-api-core==2.25.1
-google-api-python-client==2.177.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
+google-ai-generativelanguage
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-generativeai
 googleapis-common-protos==1.70.0
 greenlet==3.2.3
 grpcio==1.74.0
