--- a/requirements.txt
+++ b/requirements.txt
@@ -134,8 +134,8 @@ jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 langchain==0.3.27
 langchain-community==0.3.27
-langchain-core==0.3.72
-langchain-google-genai==2.1.8
+langchain-core
+langchain-google-genai
 langchain-text-splitters==0.3.9
 langcodes==3.5.0
 langsmith==0.4.8
